--- a/src/pages/SobreMi/SobreMi.css
+++ b/src/pages/SobreMi/SobreMi.css
@@ -5,6 +5,11 @@
     min-width: 22.5rem;
     position: relative;
 
+    @media(max-width: 75rem){
+        padding: 3rem 1rem 1rem;
+        background-image: linear-gradient(to left top , #2d2035 , #090427 );
+    }
+
     @media (max-width: 57.5rem){
         padding: 8.5rem 1rem 1rem;
         background-image: linear-gradient(to left top , #2d2035 , #090427 );
@@ -32,6 +37,13 @@
     grid-template-rows: repeat(2, 1fr);
     gap: 2rem;
     overflow: hidden;
+
+    @media(max-width: 75rem){
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 1rem;
+        max-height: fit-content;
+    }
 
     @media(max-width: 57.5rem){
         grid-template-columns: repeat(1, 1fr);
@@ -72,6 +84,10 @@
     animation: aparecer-left 1s ease;
     animation-delay: 1s;
     animation-fill-mode: both;
+    @media(max-width: 75rem){
+        grid-column: span 2;
+        grid-row: span 1; 
+    }
     @media (max-width: 57.5rem){
         grid-column: span 1;
         grid-row: span 1;        
@@ -84,6 +100,12 @@
     animation: aparecer-left 1s ease;
     animation-delay: 1s;
     animation-fill-mode: both;
+
+    @media(max-width: 75rem){
+        grid-column: span 2;
+        grid-row: span 1; 
+    }
+
     @media (max-width: 57.5rem){
         grid-column: span 1;
         grid-row: span 1;        
@@ -226,6 +248,7 @@ to {
         height: auto;
     }
 }
+
 .Info-wrapper.Pills-wrapper{
     display: flex;
     flex-flow: column wrap;
@@ -262,6 +285,9 @@ to {
     margin-bottom: .5em;
     line-height: 1em;
 
+    @media(max-width: 75rem){
+        font-size: 2.5rem;
+    }
     @media(max-width: 57.5rem){
         font-size: 3em;
     }
