--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body{
 
     @media(max-width: 920px){
         gap: 1rem;
-        padding: 0 1rem 0 1.5rem;
+        padding: 1rem;
         background-color: #8f8f8f22;
     }
 }
@@ -68,12 +68,22 @@ body{
     gap: 48px;
 
     @media (max-width: 920px) {
-        flex-flow: column nowrap;
-        gap: 0px;
-        background-color: #00000000;
-        border: none;
+        display: none;
     }
     
+}
+.Toggle-menu{
+    display: none;
+    width: 2.5rem;
+    height: 2.5rem;
+    cursor: pointer;
+    @media(max-width: 920px){
+        display: block;
+    }
+}
+
+.Toggle-menu svg{
+    fill: var(--blanco);
 }
 
 .Header-li{
@@ -96,6 +106,11 @@ body{
         text-align: right;
         font-size: .8em;
     }
+
+    @media(max-width: 520px){
+        font-size: 2rem;
+        text-align: center;
+    }
 }
 .Header-li:hover{
     background-color: var(--lila);
@@ -108,7 +123,7 @@ body{
     gap: 12px;
 
     @media(max-width: 920px){
-        gap: 12px;
+        display: none;
     }
 }
 .Header-button{
@@ -135,4 +150,57 @@ body{
         padding: 4px 12px;
         font-size: .8em;
     }
+    @media(max-width: 520px){
+        font-size: 1.2rem;
+        padding: 8px 24px;
+    }
+}
+.Header-nav.mobile{
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--negro);
+    z-index: 2;
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 24px;
+    padding: 1rem;
+    border-radius: 0;
+    transition: all .5s ease-in-out;
+}
+.Header-ul-mobile{
+    padding: 8px 8px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 48px;
+}
+.Button-wrapper-mobile{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+}
+.Toggle-menu.mobile{
+    position: absolute;
+    top: 32px;
+    right: 32px;
+    padding: 4px;
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 32px;
+    
+}
+.Toggle-menu.mobile svg{
+    fill: var(--blanco);
+}
+.Header-svg.mobile{
+    width: 5rem;
+    height: 5rem;
 }
