--- a/src/pages/Trabajos/Trabajos.css
+++ b/src/pages/Trabajos/Trabajos.css
@@ -8,7 +8,8 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    padding: 2rem;
+    padding: 8.5rem 2rem 2rem;
+    background-image: linear-gradient(to left top , #2d2035 , #090427 );
 
     @media (max-width: 95rem){
         padding: 8.5rem 1rem 1rem;
@@ -16,7 +17,7 @@
     }
 
     @media (max-width: 57.5rem){
-        padding: 8.5rem 1rem 1rem;
+        padding: 8.5rem 1rem 3rem;
         background-image: linear-gradient(to left top , #2d2035 , #090427 );
     }
 }
@@ -33,7 +34,7 @@
     padding: 2rem;
 
     @media (max-width: 57.5rem){
-        padding: 2rem 1rem;
+        padding: 0rem;
         background-color: transparent;
         
     }
@@ -60,6 +61,10 @@
     gap: 2rem;
 
     @media (max-width: 57.5rem){
+        flex-flow: row nowrap;
+        gap: 1rem;
+    }
+    @media (max-width: 35rem){
         flex-flow: column nowrap;
         gap: 1rem;
     }
@@ -110,7 +115,15 @@
     width: 100%;
     max-width: 1800px;
     display: grid;
-    grid-template-columns: repeat(auto-fit , minmax(300px , 1fr));
+    grid-template-columns: repeat(auto-fit , minmax(720px , 1fr));
     gap: 3em;
     justify-content: center;
+    @media (max-width: 57.5rem){
+        grid-template-columns: repeat(auto-fit , minmax(720px , 1fr));
+        gap: 2em;
+    }
+    @media (max-width: 560px){
+        grid-template-columns: repeat(auto-fit , minmax(300px , 1fr));
+        gap: 2em;
+    }
 }
