--- a/src/pages/Contacto/Contacto.css
+++ b/src/pages/Contacto/Contacto.css
@@ -44,6 +44,9 @@
     gap: 2rem;
     background-color: #8f8f8f0c;
     position: relative;
+    animation: aparecer-bottom 1s ease;
+    animation-delay: 0s;
+    animation-fill-mode: both;
 
     @media (max-width: 920px){
         padding: 3rem 2rem;
@@ -110,6 +113,16 @@
         transform: rotate(30deg);
     }
 }
+@keyframes aparecer-bottom {
+    from{
+        opacity: 0;
+        transform: translateY(-200px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 .Redes-wrapper{
     display: flex;
     flex-flow: row nowrap;
@@ -118,6 +131,9 @@
     padding: 0.5rem 2rem;
     background-color: #000;
     border-radius: 12px;
+    animation: aparecer-top 1s ease;
+    animation-delay: .5s;
+    animation-fill-mode: both;
 
     @media(max-width: 920px){
         padding: 1rem;
