--- a/src/pages/SobreMi/SobreMi.css
+++ b/src/pages/SobreMi/SobreMi.css
@@ -278,6 +278,12 @@ to {
         font-size: .8rem;
     }
 }
+.Stack-pill:hover{
+    border: 1px solid var(--blanco);
+    background-color: var(--lila);
+    color: var(--blanco);
+    opacity: 1;
+}
 .Info-h1{
     color: var(--lila);
     font-weight: 700;
