--- a/src/components/CardTrabajo/CardTrabajo.css
+++ b/src/components/CardTrabajo/CardTrabajo.css
@@ -64,7 +64,7 @@
     }
 }
 .Trabajos-info{
-    margin-top: .5rem;
+    margin-top: 1rem;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
@@ -74,7 +74,7 @@
 .Trabajos-h3{
     display: block;
     letter-spacing: 1px;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     font-weight: 400;
     opacity: .4;
     transition: all .5s ease;
