--- a/src/pages/Inicio/Inicio.css
+++ b/src/pages/Inicio/Inicio.css
@@ -11,7 +11,6 @@
     }
 }
 .Inicio-wrapper{
-    border: 1px solid #3b354d77;
     border-radius: 12px;
     position: relative;
     top: 0;
@@ -22,7 +21,6 @@
     flex-flow: column nowrap;
     justify-content: space-evenly;
     align-items: center;
-    background-image: linear-gradient(to left top, #090114ff , #06032c55);
     text-align: center;
 
     @media (max-width: 920px){
@@ -34,22 +32,26 @@
     }
 }
 .Inicio-wrapper main{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+
     @media (max-width: 920px){
-        display: flex;
-        flex-flow: column nowrap;
-        justify-content: center;
-        align-items: center;
         gap: 1rem;
     }
 }
 .Inicio-h1{
     pointer-events: none;
     color: #b027ff;
-    font-size: 18rem;
+    font-size: 15rem;
     line-height: .9em;
     opacity: .8;
     font-weight: 300;
     mix-blend-mode:hard-light;
+    transition: all 1s ease;
+    animation: h1-animation 1s ease-in-out both;
 
     @media (max-width: 920px){
         font-size: 8rem;
@@ -57,18 +59,42 @@
         mix-blend-mode: screen;
     }
 }
+@keyframes h1-animation{
+    0%{
+        transform: translateY(-50px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
 .Inicio-h2{
     pointer-events: none;
     color: var(--blanco);
     font-size: 2em;
     opacity: .7;
-    line-height: .8em;
+    line-height: 1em;
     font-weight: 400;
+    letter-spacing: 1px;
+    transition: all 1s ease;
+    animation: h2-animation 1s ease-in-out both;
+    animation-delay: 1s;
 
     @media (max-width: 920px){
         width: 70%;
         font-size: 1.5em;
         line-height: 1.2em;
+    }
+}
+@keyframes h2-animation{
+    0%{
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0);
+        opacity: 1;
     }
 }
 .Inicio-span{
@@ -81,10 +107,22 @@
     padding: 1rem 2rem;
     border-radius: 12px;
     position: relative;
+    animation: span-animation 1s ease-in-out both;
+    animation-delay: 1.5s;
 
     @media (max-width: 920px){
         padding: 1rem;
         background-color: #1a1a1a77;
+    }
+}
+@keyframes span-animation{
+    0%{
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0);
+        opacity: 1;
     }
 }
 .Inicio-span:nth-child(2){
