--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,21 @@ body{
         background-color: #8f8f8f22;
     }
 }
+
+.Header-nav.desktop{
+    animation: nav-animation 1s ease-in-out both;
+    animation-delay: 1s;
+}
+@keyframes nav-animation{
+    0%{
+        transform: translateY(-50px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
 .Header-svg{
     width: 3rem;
     height: 3rem;
@@ -59,7 +74,7 @@ body{
 }
 .Header-ul{
     padding: 8px 8px;
-    border: 1px solid #3b354d77;
+    /* border: 1px solid var(--blanco); */
     border-radius: 12px;
     background-color: #000000;
     display: flex;
@@ -140,7 +155,7 @@ body{
 }
 .Header-button{
     padding: 4px 8px;
-    border: 2px solid var(--blanco);
+    border: 1px solid var(--blanco);
     border-radius: 6px;
     color: var(--blanco);
     font-weight: 400;
@@ -152,7 +167,7 @@ body{
     &:hover{
         background-color: var(--lila);
         opacity: 1;
-        border: 2px solid var(--lila);
+        border: 1px solid var(--lila);
     }
     &:active{
         transform: scale(.95);
