--- a/src/components/Fondos/Fondos.css
+++ b/src/components/Fondos/Fondos.css
@@ -47,7 +47,7 @@
 }
 .Fondo-interna{
     visibility: hidden;
-    background-image: linear-gradient(to left top , #2b2b2b , #1a1a1a);
+    background-image: linear-gradient(to left top , #000000 , #030110);
     opacity: 0;
     position: absolute;
     top: 0;
